Refactor resource utilization and implement AWS connection checking
Resource utilization now is a nested object of VIM objects retrieved
from the VIM adaptor. It may be null (in case of a connection error) or
empty (in case of an AWS VIM).
